--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,12 @@
     </dependency>
 
 
+    <!--比c3p0还要厉害的连接池HikariCP-->
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP-java7</artifactId>
+      <version>2.4.13</version>
+    </dependency>
   </dependencies>
 
   
