--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,25 @@
   <dependencies>
 
 
+    <dependency>
+      <groupId>aliyun-java-sdk-dysmsapi</groupId>
+      <artifactId>dysmsapi</artifactId>
+      <version>1.0.0</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/lib/aliyun-java-sdk-dysmsapi-1.0.0.jar
+      </systemPath>
+    </dependency>
+
+
+    <dependency>
+      <groupId>aliyun-java-sdk-core</groupId>
+      <artifactId>core</artifactId>
+      <version>3.3.1</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/lib/aliyun-java-sdk-core-3.3.1.jar
+      </systemPath>
+    </dependency>
+
 
     <!-- 添加jstl依赖 -->
     <dependency>
@@ -224,11 +243,7 @@
     </dependency>
 
     <!--mybatis逆向工程-->
-    <dependency>
-      <groupId>org.mybatis.generator</groupId>
-      <artifactId>mybatis-generator</artifactId>
-      <version>1.3.5</version>
-    </dependency>
+
     <dependency>
       <groupId>org.mybatis.generator</groupId>
       <artifactId>mybatis-generator-maven-plugin</artifactId>
@@ -274,6 +289,27 @@
   <build>
     <finalName>Swap</finalName>
     <plugins>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.10</version>
+        <executions>
+          <execution>
+            <id>copy-dependencies</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/lib</outputDirectory>
+              <includeScope>system</includeScope>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
